test/files/neg/t12233.check
t12233.scala:4: error: ambiguous implicit values:
 both value hehe of type TypeClass[T]
 and value evidence$2 of type TypeClass[T]
 match expected type TypeClass[T]
  def this(i: Int)(implicit hehe: TypeClass[T], j: Int) = this(i, j)
                                                          ^
1 error
